Fixing array-to-list conversion